--- a/GarupaAPTool/GarupaAPTool/App.config
+++ b/GarupaAPTool/GarupaAPTool/App.config
@@ -1,5 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="GarupaAPTool.My.MySettings.Garupa" connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source=|DataDirectory|\Garupa.mdb;Persist Security Info=True"
+            providerName="System.Data.OleDb" />
+    </connectionStrings>
     <startup>
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.1" />
     </startup>
