--- a/GarupaAPTool/GarupaAPTool/GarupaAPTool.vbproj
+++ b/GarupaAPTool/GarupaAPTool/GarupaAPTool.vbproj
@@ -62,6 +62,9 @@
   <PropertyGroup>
     <OptionInfer>On</OptionInfer>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>Image\GarupaAPTool.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Data" />
@@ -123,6 +126,9 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Dialog\Edit.resx">
+      <DependentUpon>Edit.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="My Project\Resources.resx">
       <Generator>VbMyResourcesResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.vb</LastGenOutput>
@@ -173,7 +179,10 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Image\AY.png" />
+    <Content Include="Image\EditAnime.gif" />
     <Content Include="Image\Exit.png" />
+    <Content Include="Image\GarupaAPTool.ico" />
+    <Content Include="Image\help.gif" />
     <Content Include="Image\KKR.png" />
     <Content Include="Image\KSM.png" />
     <Content Include="Image\RN.png" />
